Task: integrated data with mysql

--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -1,42 +1,39 @@
 {% extends "layout.html" %}
 {% block content %}
-<form action="/cities/new" method="POST">
+<form action="/homes/new" method="POST">
     <div class="row">
         <div class="col">
-            <label for="fldName">City Name</label>
-            <input id="fldName" type="text" class="form-control" placeholder="City Name" name="fldName">
+            <label for="fldIndex">Home Index</label>
+            <input id="fldIndex" type="text" class="form-control" placeholder="Home Index" name="fldIndex">
         </div>
         <div class="col">
-            <label for="fldAbbreviation">City Abbreviation</label>
-            <input id="fldAbbreviation" t ype="text" class="form-control" placeholder="City Abbreviation"
-                   name="fldAbbreviation">
+            <label for="fldZip">Zip Code</label>
+            <input id="fldZip" type="text" class="form-control" placeholder="Zip Code" name="fldZip">
         </div>
         <div class="col">
-            <label for="fldCountry">City Country</label>
-            <input id="fldCountry" type="text" class="form-control" placeholder="City Country" name="fldCountry">
+            <label for="fldBaths">Baths in Home</label>
+            <input id="fldBaths" type="text" class="form-control" placeholder="Home Baths" name="fldBaths">
         </div>
     </div>
 
     <div class="row">
         <div class="col">
-            <label for="fldLat">City Latitude</label>
-            <input id="fldLat" type="text" class="form-control" placeholder="City Latitude" name="fldLat">
+            <label for="fldLivingSpacesqr">Living Space (sqr ft)</label>
+            <input id="fldLivingSpacesqr" type="text" class="form-control" placeholder="Square ft" name="fldLivingSpacesqr">
         </div>
         <div class="col">
-            <label for="fldlong">City Longitude</label>
-            <input id="fldlong" type="text" class="form-control" placeholder="City Longitude" name="fldLong">
+            <label for="fldBeds">Beds in Home</label>
+            <input id="fldBeds" type="text" class="form-control" placeholder="Home beds" name="fldBeds">
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <label for="fldCapitalStatus">Capital Status</label>
-
-            <input id="fldCapitalStatus" type="text" class="form-control" placeholder="Capital Status "
-                   name="fldCapitalStatus">
+            <label for="fldYear">Year Built</label>
+            <input id="fldYear" type="text" class="form-control" placeholder="Year Built" name="fldYear">
         </div>
         <div class="col">
-            <label for="fldPopulation">City Population</label>
-            <input id="fldPopulation" type="text" class="form-control" placeholder="Population" name="fldPopulation">
+            <label for="fldListPrice">Listing Price</label>
+            <input id="fldListPrice" type="text" class="form-control" placeholder="Listing" name="fldListPrice">
         </div>
     </div>
     <button type="submit" class="btn btn-success">Create</button>
