--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,42 +1,39 @@
 {% extends "layout.html" %}
 {% block content %}
-<form action="/edit/{{city.id}}" method="post">
+<form action="/edit/{{home.id}}" method="post">
     <div class="row">
         <div class="col">
-            <label for="fldName">City Name</label>
-            <input id="fldName" type="text" class="form-control" placeholder="City Name" name="fldName" value="{{city.fldName}}">
+            <label for="fldIndex">Home Index</label>
+            <input id="fldIndex" type="text" class="form-control" placeholder="Home Index" name="fldName" value="{{home.fldIndex}}">
         </div>
         <div class="col">
-            <label for="fldAbbreviation">City Abbreviation</label>
-            <input id="fldAbbreviation" type="text" class="form-control" placeholder="City Abbreviation"
-                   name="fldAbbreviation" value="{{city.fldAbbreviation}}">
+            <label for="fldZip">Zip Code</label>
+            <input id="fldZip" type="text" class="form-control" placeholder="Zip Code" name="fldZip" value="{{home.fldZip}}">
         </div>
         <div class="col">
-            <label for="fldCountry">City Country</label>
-            <input id="fldCountry" type="text" class="form-control" placeholder="City Country" name="fldCountry" value="{{city.fldCountry}}">
+            <label for="fldBaths">Baths in Home</label>
+            <input id="fldBaths" type="text" class="form-control" placeholder="Home Baths" name="fldBaths" value="{{home.fldBaths}}">
         </div>
     </div>
 
     <div class="row">
         <div class="col">
-            <label for="fldLat">City Latitude</label>
-            <input id="fldLat" type="text" class="form-control" placeholder="City Latitude" name="fldLat" value="{{city.fldLat}}">
+            <label for="fldLivingSpacesqr">Living Space (sqr ft)</label>
+            <input id="fldLivingSpacesqr" type="text" class="form-control" placeholder="Square ft" name="fldLivingSpacesqr" value="{{home.fldLivingSpacesqr}}">
         </div>
         <div class="col">
-            <label for="fldlong">City Longitude</label>
-            <input id="fldlong" type="text" class="form-control" placeholder="City Longitude" name="fldLong" value="{{city.fldLong}}">
+            <label for="fldBeds">Beds in Home</label>
+            <input id="fldBeds" type="text" class="form-control" placeholder="Home beds" name="fldBeds" value="{{home.fldBeds}}">
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <label for="fldCapitalStatus">Capital Status</label>
-
-            <input id="fldCapitalStatus" type="text" class="form-control" placeholder="Capital Status"
-                   name="fldCapitalStatus" value="{{city.fldCapitalStatus}}">
+            <label for="fldYear">Year Built</label>
+            <input id="fldYear" type="text" class="form-control" placeholder="Year Built" name="fldYear" value="{{home.fldYear}}">
         </div>
         <div class="col">
-            <label for="fldPopulation">City Population</label>
-            <input id="fldPopulation" type="text" class="form-control" placeholder="Population" name="fldPopulation" value="{{city.fldPopulation}}">
+            <label for="fldListPrice">Listing Price</label>
+            <input id="fldListPrice" type="text" class="form-control" placeholder="Listing Price" name="fldListingPrice" value="{{home.fldListPrice}}">
         </div>
     </div>
     <button type="submit" class="btn btn-success">Save</button>
