--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,25 +3,25 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">City Name</th>
-        <th scope="col">Latitude</th>
-        <th scope="col">Longitude</th>
-        <th scope="col">Country</th>
-        <th scope="col">Abbreviation</th>
-        <th scope="col">Capital Status</th>
-        <th scope="col">Population</th>
+        <th scope="col">Home Index</th>
+        <th scope="col">Zip Code</th>
+        <th scope="col">Baths in Home</th>
+        <th scope="col">Living Space (sqr ft)</th>
+        <th scope="col">Beds in Home</th>
+        <th scope="col">Year Built</th>
+        <th scope="col">Listing Price</th>
     </tr>
     </thead>
     <tbody>
-    {% for city in cities %}
+    {% for home in homes %}
     <tr>
-        <td><a href="view/{{city.id}}">{{ city.fldName }}</a></td>
-        <td>{{ city.fldLat }}</td>
-        <td>{{ city.fldLong }}</td>
-        <td>{{ city.fldCountry }}</td>
-        <td>{{ city.fldAbbreviation }}</td>
-        <td>{{ city.fldCapitalStatus }}</td>
-        <td>{{ city.fldPopulation }}</td>
+        <td><a href="view/{{home.id}}">{{ home.fldIndex }}</a></td>
+        <td>{{ home.fldLivingSpacesqr }}</td>
+        <td>{{ home.fldBeds }}</td>
+        <td>{{ home.fldBaths }}</td>
+        <td>{{ home.fldZip }}</td>
+        <td>{{ home.fldYear }}</td>
+        <td>{{ home.fldListPrice }}</td>
     </tr>
     {% endfor %}
     </tbody>
